added adjustments of homework